--- a/Assignment6.0/OnlineCoursePortal.csproj
+++ b/Assignment6.0/OnlineCoursePortal.csproj
@@ -65,6 +65,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="AddCoursesService.svc" />
+    <Content Include="PaymentService.svc" />
     <Content Include="RegisterCourseService.svc" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -73,7 +74,11 @@
       <DependentUpon>AddCoursesService.svc</DependentUpon>
     </Compile>
     <Compile Include="IAddCoursesService.cs" />
+    <Compile Include="IPaymentService.cs" />
     <Compile Include="IRegisterCourseService.cs" />
+    <Compile Include="PaymentService.svc.cs">
+      <DependentUpon>PaymentService.svc</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegisterCourseService.svc.cs">
       <DependentUpon>RegisterCourseService.svc</DependentUpon>
@@ -86,6 +91,7 @@
     <Content Include="courses_list.json" />
     <Content Include="libman.json" />
     <None Include="packages.config" />
+    <Content Include="users_list.json" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
