--- a/Assignment6.0/OnlineCoursePortal.csproj
+++ b/Assignment6.0/OnlineCoursePortal.csproj
@@ -67,6 +67,7 @@
     <Content Include="AddCoursesService.svc" />
     <Content Include="PaymentService.svc" />
     <Content Include="RegisterCourseService.svc" />
+    <Content Include="RegisterUserService.svc" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -76,12 +77,16 @@
     <Compile Include="IAddCoursesService.cs" />
     <Compile Include="IPaymentService.cs" />
     <Compile Include="IRegisterCourseService.cs" />
+    <Compile Include="IRegisterUserService.cs" />
     <Compile Include="PaymentService.svc.cs">
       <DependentUpon>PaymentService.svc</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegisterCourseService.svc.cs">
       <DependentUpon>RegisterCourseService.svc</DependentUpon>
+    </Compile>
+    <Compile Include="RegisterUserService.svc.cs">
+      <DependentUpon>RegisterUserService.svc</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
